--- a/notes/supervised learning/decision-tree/esercizio.ipynb
+++ b/notes/supervised learning/decision-tree/esercizio.ipynb
@@ -10,6 +10,177 @@
     "collapsed": false
    },
    "id": "3165d3e804c2c68"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn import tree"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-14T11:27:09.852801Z",
+     "start_time": "2023-10-14T11:27:09.832692Z"
+    }
+   },
+   "id": "77ed52b28cc3b1a7"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "capiamo i vari pacchetti che sono stati importati cosa fanno:\n",
+    "- `pandas` è un pacchetto che permette di leggere e scrivere file in formato csv, excel, ecc. e permette di manipolare i dati in essi contenuti\n",
+    "- `numpy` è un pacchetto che permette di manipolare i dati in modo vettoriale\n",
+    "\n",
+    "pacchetti usati per il **preprocessing**:\n",
+    "- `train_test_split` è un pacchetto che permette di dividere il dataset in due parti: una per il training e una per il test\n",
+    "\n",
+    "pacchetto per il **modello**:\n",
+    "- `DecisionTreeClassifier` è un pacchetto che permette di creare un modello di classificazione basato sul KNN\n",
+    "\n",
+    "pacchetti usati per il **test**:\n",
+    "- `accuracy_score` è un pacchetto che permette di calcolare l'accuracy score"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4aa75fc07c49fef6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# caricamento del dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b23f25740431e1e9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     Initial payment  Last payment  Credit Score  House Number Result\n0                201         10018           250          3046    yes\n1                205         10016           395          3044    yes\n2                257         10129           109          3251    yes\n3                246         10064           324          3137    yes\n4                117         10115           496          3094    yes\n..               ...           ...           ...           ...    ...\n995              413         14914           523          4683     No\n996              359         14423           927          4838     No\n997              316         14872           613          4760     No\n998              305         14926           897          4572     No\n999              168         14798           834          4937     No\n\n[1000 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Initial payment</th>\n      <th>Last payment</th>\n      <th>Credit Score</th>\n      <th>House Number</th>\n      <th>Result</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>201</td>\n      <td>10018</td>\n      <td>250</td>\n      <td>3046</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>205</td>\n      <td>10016</td>\n      <td>395</td>\n      <td>3044</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>257</td>\n      <td>10129</td>\n      <td>109</td>\n      <td>3251</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>246</td>\n      <td>10064</td>\n      <td>324</td>\n      <td>3137</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>117</td>\n      <td>10115</td>\n      <td>496</td>\n      <td>3094</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>995</th>\n      <td>413</td>\n      <td>14914</td>\n      <td>523</td>\n      <td>4683</td>\n      <td>No</td>\n    </tr>\n    <tr>\n      <th>996</th>\n      <td>359</td>\n      <td>14423</td>\n      <td>927</td>\n      <td>4838</td>\n      <td>No</td>\n    </tr>\n    <tr>\n      <th>997</th>\n      <td>316</td>\n      <td>14872</td>\n      <td>613</td>\n      <td>4760</td>\n      <td>No</td>\n    </tr>\n    <tr>\n      <th>998</th>\n      <td>305</td>\n      <td>14926</td>\n      <td>897</td>\n      <td>4572</td>\n      <td>No</td>\n    </tr>\n    <tr>\n      <th>999</th>\n      <td>168</td>\n      <td>14798</td>\n      <td>834</td>\n      <td>4937</td>\n      <td>No</td>\n    </tr>\n  </tbody>\n</table>\n<p>1000 rows × 5 columns</p>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance_data = pd.read_csv('./dataset.csv')\n",
+    "balance_data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-14T11:36:34.259658Z",
+     "start_time": "2023-10-14T11:36:34.239161Z"
+    }
+   },
+   "id": "ae8845e8380af816"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# split"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cdaf24c34f83bd01"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DecisionTreeClassifier(criterion='entropy', max_depth=3, min_samples_leaf=5,\n                       random_state=100)",
+      "text/html": "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(criterion=&#x27;entropy&#x27;, max_depth=3, min_samples_leaf=5,\n                       random_state=100)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(criterion=&#x27;entropy&#x27;, max_depth=3, min_samples_leaf=5,\n                       random_state=100)</pre></div></div></div></div></div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = balance_data.values[:, 0:4] # tutte le righe, le colonne dalla prima alla quarta\n",
+    "Y = balance_data.values[:, 4] # tutte le righe, l'ultima colonna\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size = 0.3, random_state = 100)\n",
+    "clf_entropy = DecisionTreeClassifier(criterion = 'entropy', random_state = 100, max_depth = 3, min_samples_leaf = 5)\n",
+    "clf_entropy.fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-14T11:41:52.050546Z",
+     "start_time": "2023-10-14T11:41:52.026236Z"
+    }
+   },
+   "id": "3844c464c60e1a86"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['yes', 'yes', 'No', 'yes', 'No', 'yes', 'yes', 'yes', 'No', 'No',\n       'No', 'No', 'yes', 'No', 'No', 'yes', 'yes', 'No', 'yes', 'No',\n       'No', 'yes', 'No', 'yes', 'yes', 'No', 'No', 'yes', 'No', 'No',\n       'No', 'yes', 'yes', 'yes', 'yes', 'No', 'No', 'No', 'yes', 'No',\n       'yes', 'yes', 'yes', 'No', 'No', 'yes', 'yes', 'yes', 'No', 'No',\n       'yes', 'No', 'yes', 'yes', 'yes', 'yes', 'No', 'yes', 'No', 'yes',\n       'yes', 'No', 'yes', 'yes', 'No', 'yes', 'yes', 'yes', 'No', 'No',\n       'No', 'No', 'No', 'yes', 'No', 'yes', 'yes', 'No', 'yes', 'No',\n       'No', 'No', 'No', 'yes', 'No', 'yes', 'No', 'yes', 'yes', 'No',\n       'yes', 'yes', 'yes', 'yes', 'yes', 'No', 'yes', 'yes', 'yes',\n       'yes', 'No', 'No', 'yes', 'yes', 'No', 'yes', 'yes', 'yes', 'No',\n       'yes', 'yes', 'yes', 'yes', 'No', 'No', 'yes', 'yes', 'yes', 'No',\n       'No', 'No', 'No', 'yes', 'yes', 'No', 'yes', 'yes', 'yes', 'No',\n       'No', 'yes', 'yes', 'No', 'yes', 'yes', 'yes', 'No', 'yes', 'yes',\n       'No', 'No', 'yes', 'yes', 'yes', 'No', 'yes', 'yes', 'yes', 'yes',\n       'No', 'yes', 'No', 'No', 'No', 'No', 'yes', 'No', 'No', 'No',\n       'yes', 'yes', 'No', 'yes', 'yes', 'No', 'yes', 'No', 'yes', 'No',\n       'No', 'yes', 'yes', 'No', 'yes', 'No', 'yes', 'yes', 'No', 'No',\n       'No', 'No', 'No', 'yes', 'No', 'No', 'yes', 'yes', 'yes', 'yes',\n       'yes', 'No', 'yes', 'No', 'yes', 'No', 'No', 'No', 'yes', 'yes',\n       'No', 'No', 'No', 'yes', 'yes', 'No', 'No', 'yes', 'yes', 'No',\n       'No', 'yes', 'yes', 'yes', 'yes', 'yes', 'yes', 'yes', 'yes',\n       'yes', 'No', 'yes', 'yes', 'No', 'No', 'yes', 'No', 'yes', 'yes',\n       'No', 'No', 'yes', 'No', 'yes', 'yes', 'yes', 'yes', 'No', 'No',\n       'No', 'No', 'yes', 'yes', 'No', 'yes', 'yes', 'No', 'yes', 'No',\n       'No', 'No', 'No', 'yes', 'No', 'No', 'No', 'No', 'No', 'No', 'No',\n       'yes', 'yes', 'yes', 'yes', 'yes', 'yes', 'No', 'No', 'No', 'No',\n       'yes', 'No', 'yes', 'yes', 'yes', 'No', 'No', 'No', 'No', 'yes',\n       'No', 'yes', 'No', 'No', 'No', 'yes', 'yes', 'No', 'yes', 'yes',\n       'yes', 'No', 'No', 'yes', 'No', 'yes', 'yes', 'No', 'No', 'yes',\n       'yes'], dtype=object)"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = clf_entropy.predict(X_test)\n",
+    "y_pred"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-14T11:42:42.499841Z",
+     "start_time": "2023-10-14T11:42:42.483909Z"
+    }
+   },
+   "id": "32db9d58f3ade53b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 93.66666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'accuracy: {accuracy_score(y_test, y_pred) * 100}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-14T11:43:33.270844Z",
+     "start_time": "2023-10-14T11:43:33.256188Z"
+    }
+   },
+   "id": "96e2c810eba8bb0f"
   }
  ],
  "metadata": {
